agregar rol al usuario en base al cargo y cargos quemados